--- a/searxng/settings.yml
+++ b/searxng/settings.yml
@@ -1,11 +1,18 @@
-# see https://docs.searxng.org/admin/settings/settings.html#settings-use-default-settings
-use_default_settings: true
+# Disable default settings to apply your custom config
+use_default_settings: false
+
+# Server configuration
 server:
-  # base_url is defined in the SEARXNG_BASE_URL environment variable, see .env and docker-compose.yml
-  secret_key: "ultrasecretkey"  # change this!
-  limiter: false  # enable this when running the instance for a public usage on the internet
-  image_proxy: true
+  base_url: "http://35.152.46.49:8888"  # Replace with your IP or domain
+  secret_key: "ultrasecretkey"              # Change this to something random/secure
+  public_instance: true                     # Allow public use (required for API access)
+  limiter: false                            # Set to true to rate-limit public usage
+  image_proxy: true                         # Optional: enables image proxying
+
+# User interface options
 ui:
-  static_use_hash: true
+  static_use_hash: true                     # Improves caching; recommended
+
+# Redis settings (used for suggestions, caching, etc.)
 redis:
   url: redis://redis:6379/0
